--- a/package.json
+++ b/package.json
@@ -1,13 +1,2 @@
-{
-  "name": "coc-website",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^2.6.11",
-    "dotenv": "^16.3.1"
-  }
-}
+npm init -y
+npm install node-telegram-bot-api axios dotenv
