--- a/package.json
+++ b/package.json
@@ -1,2 +1,21 @@
-npm init -y
-npm install node-telegram-bot-api axios dotenv
+{
+  "name": "telegram-clash-bot",
+  "version": "1.0.0",
+  "description": "Telegram bot to fetch Clash of Clans player name",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "keywords": [
+    "telegram",
+    "clash-of-clans",
+    "bot"
+  ],
+  "author": "YourName",
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.7.2",
+    "dotenv": "^16.3.1",
+    "node-telegram-bot-api": "^0.61.0"
+  }
+}
